@@ -110,6 +110,11 @@
         <version>0.0.8</version>
         <configuration>
           <mainClass>org.example.ugv_rc.Launcher</mainClass>
+          <options>
+            <option>--enable-native-access=javafx.graphics</option>
+            <option>--enable-native-access=ALL-UNNAMED</option>
+            <option>--enable-native-access=jinput</option>
+          </options>
         </configuration>
       </plugin>
     </plugins>
